[package]
name = "miniimm"
version = "1.0.0"
edition = "2021"

description = "provides small string optimization for immutable strings"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["string", "str", "small", "small-string", "immutable"]
categories = ["data-structures", "memory-management"]
